[package]
name = "icmp-echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
futures-util = "0.3"
icmp-socket = "0.2"
structopt = "0.3"
strum_macros = "0.24"
tokio = { version = "1.28", features = ["full"] }
